--- a/My_project/index.ipynb
+++ b/My_project/index.ipynb
@@ -39,7 +39,21 @@
    "metadata": {},
    "source": [
     "# Dataset\n",
-    "Presentation du dataset\n"
+    "## Presentation du dataset\n",
+    "\n",
+    "\n",
+    "Bitcoin est la crypto-monnaie la plus ancienne et la plus connue, publiée pour la première fois en open source en 2009 par l'anonyme Satoshi Nakamoto. Bitcoin sert de moyen décentralisé d'échange numérique, avec des transactions vérifiées et enregistrées dans un grand livre public distribué (la blockchain) sans avoir besoin d'une autorité de tenue des registres de confiance ou d'un intermédiaire central. Les blocs de transaction contiennent un hachage cryptographique SHA-256 des blocs de transaction précédents, et sont donc \"chaînés\" ensemble, servant d'enregistrement immuable de toutes les transactions qui ont déjà eu lieu. Comme pour toute devise/marchandise sur le marché, le trading de bitcoins et les instruments financiers ont rapidement suivi l'adoption publique du bitcoin et continuent de croître.\n",
+    "\n",
+    " Vous trouverez ici des données historiques sur le marché du bitcoin à des intervalles journaliers pour certains échanges de bitcoin où les échanges ont lieu."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Objectif\n",
+    "Nous allons procéder à une exploration des données dans le but de comprendre l' évolution de cette monnaie et l' engoument pour celle-ci "
    ]
   },
   {
@@ -496,12 +510,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On rajoute une Colonne qui contient les nom des journées \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On rajoute une Colonne qui contient les nom des journées \n",
     "data[\"Jours\"]=data['Date'].dt.day_name()"
    ]
   },
@@ -710,7 +731,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Nous pouvons constater que les jours où le valeur du bitcoin est élévé sont le Samedi et le Dimanche "
+    "> Nous pouvons constater que les jours où le valeur du bitcoin est élévé sont le Samedi et le Dimanche  car les investisseurs ont plus de temps pour analyser le marché et investir \n",
+    "\n"
    ]
   },
   {
@@ -7093,7 +7115,7 @@
     }
    ],
    "source": [
-    "#On va generer un graphique qui montre l' evolution des cours de chaque jours en fonction des années \n",
+    "# On va generer un graphique qui montre l' evolution des cours de chaque jours en fonction des années \n",
     "\n",
     "px.line(data, x=\"Date\",y=\"Open\",color=\"Jour\")"
    ]
@@ -7103,7 +7125,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le prix subissent une croissance au fil des années ,Par contre il n' y a pas de changement pertinent selon des jours.\n",
+    "> Il n'y a pas d' influence particuliere   sur le volume des transactions par  jour sur le marché \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Le prix subissent une croissance au fil des années ,Par contre il n' y a pas de changement pertinent selon des jours.\n",
     "Lea chute du prix entre 2021 et 2022 doit être au corona."
    ]
   },
@@ -32697,6 +32727,7 @@
     }
    ],
    "source": [
+    "#Essayons d' observer la colinéarité des prix selon les jours \n",
     "px.scatter_matrix(data,color=\"Jour\")"
    ]
   },
@@ -32709,9 +32740,9 @@
     "Nous avons des données sur la valeur de  Bitcoin sur un certain nombre d'années, et après avoir effectué quelques analyses, nous voyons les résultats\n",
     "La valeur la plus basse pour l'ouverture sera les samedis et dimanches / en raison des vacances.\n",
     "\n",
-    "L'augmentation de la valeur au fil des ans à un niveau élevé - indique l'intérêt pour les clients numériques et leur valeur augmente et les gens en entendent davantage parler .\n",
+    "L'augmentation de la valeur au fil des ans à un niveau élevé  indique l'intérêt pour les clients numériques et la  valeur augmente eau fur et a mesure que les  gens en entendent davantage parler,Un excellent indicateur est le volume  de transction éffectué\n",
     "\n",
-    "Les faibles valeurs entre 2021 et 2022 peuvent être dues au corona."
+    "Les faibles valeurs entre 2021 et 2022 peuvent être dues au corona, Cependant  le bitcoin semble avoir un point dattention assez particulier pour les investisseurs "
    ]
   }
  ],
